--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.3.0",
-    "@nuxt/ui": "3.0.2",
+    "@nuxt/ui-pro": "^3.1.3",
+    "@solana/spl-memo": "^0.2.5",
     "@solana/wallet-adapter-wallets": "^0.19.36",
     "@solana/web3.js": "^1.98.1",
     "bs58": "^6.0.0",
